# proxy-weather-api

./: .env.example  InstallPythonPackage.ps1  README.md  config.py  mypy.ini  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/sample/: __init__.py  routes.py
test/: __init__.py  test_sample.py
